--- a/AUTHORS
+++ b/AUTHORS
@@ -1,19 +1,3 @@
-Authors of Simple Shell Project
-
-Zuriel Victus Azameti
-Chigozirim Uwaezuoke
-
-About the Authors
-Zuriel Victus Azameti and Chigozirim Uwaezuoke are both Alx studentd
-
-Contributions
-Zuriel Victus Azameti and Chigozirim Uwaezuoke collaborated on the Simple Shell Project. They implemented a basic Unix shell using the C programming language. The shell can be used to run commands, execute scripts, and manage processes. In addition to the basic commands, the shell also supports I/O redirection, background processes, and pipeline commands.
-
-Contact Information
-If you have any questions or feedback regarding the Simple Shell Project, please feel free to contact Zuriel Victus Azameti or Chigozirim Uwaezuoke.
-
-Zuriel Victus Azameti:
-GitHub: https://github.com/zuriel0001
-
-Chigozirim Uwaezuoke:
-GitHub: https://github.com/Chigalab1
+Chigozirim Uwaezuoke <Chigozirimuwaezuoke@gmail.com>
+zuriel0001 <125594301+zuriel0001@users.noreply.github.com>
+zuriel0001 <dogbeykwame.kd@gmail.com>
